--- a/.github/terraform-plan.yaml
+++ b/.github/terraform-plan.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Configure AWS Credentials
         env:
-          AWS_REGION: eu-south-1
+          AWS_REGION: ${{ secrets.AWS_REGION }}
         uses: aws-actions/configure-aws-credentials@67fbcbb121271f7775d2e7715933280b06314838
         with:
           role-to-assume: ${{ secrets.IAM_ROLE }}
