--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -31,7 +31,7 @@ on:
 jobs:
   manual-trigger:
     if: "${{ github.event.inputs.environment != '' }}"
-    name: "terraform-apply"
+    name: "terraform-apply (manual)"
     runs-on: ubuntu-latest
     continue-on-error: false
     permissions:
@@ -58,8 +58,8 @@ jobs:
           working-directory: src/main
 
   merge-trigger:
-      if: "${{ github.event_name == 'push' }} && github.ref == 'refs/heads/main'"
-      name: "terraform-apply"
+      if: ${{ github.event_name == 'push' }} && github.ref == 'refs/heads/main'
+      name: "terraform-apply (merge)"
       strategy:
         max-parallel: 1
         matrix:
