--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -58,7 +58,7 @@ jobs:
           working-directory: src/main
 
   merge-trigger:
-      if: ${{ github.event_name == 'push' }} && github.ref == 'refs/heads/main'
+      if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
       name: "terraform-apply (merge)"
       strategy:
         max-parallel: 1
