--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -51,11 +51,17 @@ jobs:
           role-to-assume: ${{ secrets.IAM_ROLE }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Apply
+      - name: Apply (main)
         uses: ./.github/workflows/apply
         with:
           env: ${{ inputs.environment }}
           working-directory: src/main
+
+      - name: Apply (K8s)
+        uses: ./.github/workflows/apply
+        with:
+          env: ${{ matrix.environment }}
+          working-directory: src/main/k8s
 
   merge-trigger:
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
