--- a/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
+++ b/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
@@ -90,7 +90,9 @@ paths:
         httpMethod: "POST"
         connectionType: "VPC_LINK"
         type: "http_proxy"
-        connectionId: "${stageVariables.aws_api_gateway_vpc_link_backend_id}"       
+        connectionId: "${stageVariables.aws_api_gateway_vpc_link_backend_id}"
+        tlsConfig:
+          insecureSkipVerification: true     
    '/eservices/{eserviceId}/versions/{versionId}/probing/updateState':
     post:
       summary: Activates or deactivates the probing polling process for an e-service.
@@ -157,7 +159,9 @@ paths:
         httpMethod: "POST"
         connectionType: "VPC_LINK"
         connectionId: "${stageVariables.aws_api_gateway_vpc_link_backend_id}"
-        type: "http_proxy"              
+        type: "http_proxy"
+        tlsConfig:
+          insecureSkipVerification: true            
    '/eservices/{eserviceId}/versions/{versionId}/updateFrequency':
     post:
       summary: Updates the frequency and the time interval of an e-service's polling process.
@@ -224,7 +228,9 @@ paths:
         httpMethod: "POST"
         connectionType: "VPC_LINK"
         connectionId: "${stageVariables.aws_api_gateway_vpc_link_backend_id}"
-        type: "http_proxy"  
+        type: "http_proxy"
+        tlsConfig:
+          insecureSkipVerification: true 
 components:
   schemas:
     ChangeProbingStateRequest:
