--- a/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
+++ b/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
@@ -83,11 +83,11 @@ paths:
                 traceId: 'string'
                 errors: [{'code':'000-1234', 'detail':'The server is currently down for maintenance. Please try again later.'}]
       x-amazon-apigateway-integration:
-        uri: "http://${stageVariables.aws_lb_nlb_dns_name}/eservices/{eserviceId}/versions/{versionId}/updateState"
-        httpMethod: "POST"
-        connectionType: "VPC_LINK"
-        type: "http_proxy"
-        connectionId: "${stageVariables.aws_api_gateway_vpc_link_backend_id}"   
+        uri: 'http://${stageVariables.aws_lb_nlb_dns_name}/eservices/{eserviceId}/versions/{versionId}/updateState'
+        httpMethod: 'POST'
+        connectionType: 'VPC_LINK'
+        type: 'http_proxy'
+        connectionId: '${stageVariables.aws_api_gateway_vpc_link_backend_id}'   
    '/eservices/{eserviceId}/versions/{versionId}/probing/updateState':
     post:
       summary: Activates or deactivates the probing polling process for an e-service.
@@ -150,11 +150,11 @@ paths:
                 traceId: 'string'
                 errors: [{'code':'000-1234', 'detail':'The server is currently down for maintenance. Please try again later.'}]    
       x-amazon-apigateway-integration:
-        uri: "http://${stageVariables.aws_lb_nlb_dns_name}/eservices/{eserviceId}/versions/{versionId}/probing/updateState"
-        httpMethod: "POST"
-        connectionType: "VPC_LINK"
-        connectionId: "${stageVariables.aws_api_gateway_vpc_link_backend_id}"
-        type: "http_proxy"       
+        uri: 'http://${stageVariables.aws_lb_nlb_dns_name}/eservices/{eserviceId}/versions/{versionId}/probing/updateState'
+        httpMethod: 'POST'
+        connectionType: 'VPC_LINK'
+        connectionId: '${stageVariables.aws_api_gateway_vpc_link_backend_id}'
+        type: 'http_proxy'       
    '/eservices/{eserviceId}/versions/{versionId}/updateFrequency':
     post:
       summary: Updates the frequency and the time interval of an e-service's polling process.
@@ -217,11 +217,11 @@ paths:
                 traceId: 'string'
                 errors: [{'code':'000-1234', 'detail':'The server is currently down for maintenance. Please try again later.'}]
       x-amazon-apigateway-integration:
-        uri: "http://${stageVariables.aws_lb_nlb_dns_name}/eservices/{eserviceId}/versions/{versionId}/updateFrequency"
-        httpMethod: "POST"
-        connectionType: "VPC_LINK"
-        connectionId: "${stageVariables.aws_api_gateway_vpc_link_backend_id}"
-        type: "http_proxy"
+        uri: 'http://${stageVariables.aws_lb_nlb_dns_name}/eservices/{eserviceId}/versions/{versionId}/updateFrequency'
+        httpMethod: 'POST'
+        connectionType: 'VPC_LINK'
+        connectionId: '${stageVariables.aws_api_gateway_vpc_link_backend_id}'
+        type: 'http_proxy'
 components:
   schemas:
     ChangeProbingStateRequest:
