--- a/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
+++ b/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
@@ -155,6 +155,15 @@ paths:
         connectionType: 'VPC_LINK'
         connectionId: '${stageVariables.aws_api_gateway_vpc_link_backend_id}'
         type: 'http_proxy'
+        parameters:
+        - name: "eserviceId"
+          in: "path"
+          required: true
+          type: "string"
+        - name: "versionId"
+          in: "path"
+          required: true
+          type: "string"
         requestParameters:
            integration.request.path.eserviceId: 'method.request.path.eserviceId'
            integration.request.path.versionId: 'method.request.path.versionId'
