fix: add parameters in openapi spec

--- a/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
+++ b/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
@@ -150,7 +150,7 @@ paths:
                 traceId: 'string'
                 errors: [{'code':'000-1234', 'detail':'The server is currently down for maintenance. Please try again later.'}]    
       x-amazon-apigateway-integration:
-        uri: 'http://${stageVariables.aws_lb_nlb_dns_name}:80/eservices/{eserviceId}/versions/{versionId}/probing/updateState'
+        uri: 'http://interop-probing-nlb-dev-58a0786e6e7609ca.elb.eu-central-1.amazonaws.com/eservices/{eserviceId}/versions/{versionId}/probing/updateState'
         httpMethod: 'POST'
         connectionType: 'VPC_LINK'
         connectionId: '${stageVariables.aws_api_gateway_vpc_link_backend_id}'
