--- a/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
+++ b/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
@@ -231,6 +231,147 @@ paths:
         requestParameters:
            integration.request.path.eserviceId: 'method.request.path.eserviceId'
            integration.request.path.versionId: 'method.request.path.versionId'
+   '/eservices':
+    get:
+      summary: Retrive e-services by filters
+      description:       Retrive e-services by filters
+      tags:
+        - Read
+      operationId: searchEservices
+      parameters:
+        - name: limit
+          in: query
+          required: true
+          description: the e-service's page limit
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 100
+        - name: offset
+          in: query
+          required: true
+          description: the page's offset
+          schema:
+            type: integer
+            minimum: 0
+        - name: eserviceName
+          in: query
+          required: false
+          description:  the e-service's name
+          schema:
+            type: string
+            format: string
+        - name: producerName
+          in: query
+          required: false
+          description: the e-service's producer name
+          schema:
+            type: string
+            format: string
+        - name: versionNumber
+          in: query
+          required: false
+          description: the e-service's version
+          schema:
+            type: string
+            format: integer
+        - name: state
+          in: query
+          required: false
+          description:  the e-service's state
+          schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/EserviceStateFE'
+      responses:
+        '200':
+          description: >-
+            The search has been successfully performed 
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SearchEserviceResponse'
+        '400':
+          description: >-
+            The provided input data is invalid
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '500':                  
+          description: >-
+            A managed error has occured during the request elaboration
+          content:                        
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+              example:
+                type: string
+                status: 500 
+                title: 'Internal Server Error'
+                detail: 'There is a problem processing the request on the server.'
+                traceId: 'string'
+                errors: [{'code':'000-1234', 'detail':'The server is currently down for maintenance. Please try again later.'}]
+      x-amazon-apigateway-integration:
+        uri: 'http://${stageVariables.aws_lb_nlb_dns_name}/eservices'
+        httpMethod: 'POST'
+        connectionType: 'VPC_LINK'
+        connectionId: '${stageVariables.aws_api_gateway_vpc_link_backend_id}'
+        type: 'http_proxy'     
+                
+   '/producers':
+    get:
+      summary: Retrive e-services producers
+      description: Retrive e-services producers 
+      tags:
+        - Read
+      operationId: getEservicesProducers
+      parameters:
+        - name: producerName
+          in: query
+          required: false
+          description: the e-service's producer name
+          schema:
+            type: string
+            format: string
+      responses:
+        '200':
+          description: >-
+            The search for the list of producers has been performed successfully
+          content:
+            application/json:
+              schema:
+               type: array
+               items:
+                $ref: '#/components/schemas/SearchProducerNameResponse'
+        '400':
+          description: >-
+            The provided input data is invalid
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        '500':                  
+          description: >-
+            A managed error has occured during the request elaboration
+          content:                        
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+              example:
+                type: string
+                status: 500 
+                title: 'Internal Server Error'
+                detail: 'There is a problem processing the request on the server.'
+                traceId: 'string'
+                errors: [{'code':'000-1234', 'detail':'The server is currently down for maintenance. Please ry again later.'}]                
+      x-amazon-apigateway-integration:
+        uri: 'http://${stageVariables.aws_lb_nlb_dns_name}/eservices'
+        httpMethod: 'POST'
+        connectionType: 'VPC_LINK'
+        connectionId: '${stageVariables.aws_api_gateway_vpc_link_backend_id}'
+        type: 'http_proxy'    
+
 components:
   schemas:
     ChangeProbingStateRequest:
