--- a/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
+++ b/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
@@ -314,7 +314,7 @@ paths:
                 errors: [{'code':'000-1234', 'detail':'The server is currently down for maintenance. Please try again later.'}]
       x-amazon-apigateway-integration:
         uri: 'http://${stageVariables.aws_lb_nlb_dns_name}/eservices'
-        httpMethod: 'POST'
+        httpMethod: 'GET'
         connectionType: 'VPC_LINK'
         connectionId: '${stageVariables.aws_api_gateway_vpc_link_backend_id}'
         type: 'http_proxy'     
@@ -367,7 +367,7 @@ paths:
                 errors: [{'code':'000-1234', 'detail':'The server is currently down for maintenance. Please ry again later.'}]                
       x-amazon-apigateway-integration:
         uri: 'http://${stageVariables.aws_lb_nlb_dns_name}/eservices'
-        httpMethod: 'POST'
+        httpMethod: 'GET'
         connectionType: 'VPC_LINK'
         connectionId: '${stageVariables.aws_api_gateway_vpc_link_backend_id}'
         type: 'http_proxy'    
