fix: Fix openapi spec

--- a/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
+++ b/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
@@ -366,7 +366,7 @@ paths:
                 traceId: 'string'
                 errors: [{'code':'000-1234', 'detail':'The server is currently down for maintenance. Please ry again later.'}]                
       x-amazon-apigateway-integration:
-        uri: 'http://${stageVariables.aws_lb_nlb_dns_name}/eservices'
+        uri: 'http://${stageVariables.aws_lb_nlb_dns_name}/producers'
         httpMethod: 'GET'
         connectionType: 'VPC_LINK'
         connectionId: '${stageVariables.aws_api_gateway_vpc_link_backend_id}'
