fix: Fix mapping method api

--- a/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
+++ b/src/main/assets/openapi_spec/interop-probing-dev-api-v1.yaml
@@ -67,7 +67,7 @@ paths:
                 errors: [{'code':'000-1234', 'detail':'The server is currently down for maintenance. Please ry again later.'}]   
       x-amazon-apigateway-integration:
         uri: 'http://${stageVariables.aws_lb_nlb_dns_name}/eservices/mainData/{eserviceRecordId}'
-        httpMethod: 'POST'
+        httpMethod: 'GET'
         connectionType: 'VPC_LINK'
         type: 'http_proxy'
         connectionId: '${stageVariables.aws_api_gateway_vpc_link_backend_id}'
@@ -119,7 +119,7 @@ paths:
                 errors: [{'code':'000-1234', 'detail':'The server is currently down for maintenance. Please ry again later.'}]   
       x-amazon-apigateway-integration:
         uri: 'http://${stageVariables.aws_lb_nlb_dns_name}/eservices/probingData/{eserviceRecordId}'
-        httpMethod: 'POST'
+        httpMethod: 'GET'
         connectionType: 'VPC_LINK'
         type: 'http_proxy'
         connectionId: '${stageVariables.aws_api_gateway_vpc_link_backend_id}'
