--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,4 @@ override.tf.json
 # .terraformrc
 # terraform.rc
 *zip
-
-.terraform.lock.hcl
-<<<<<<< HEAD
-k8s/.terraform.lock.hcl
-=======
-k8s/.terraform.lock.hcl
->>>>>>> 08065dd87fe214c8ec435e25b3957589ad8f02ac
+*.terraform.lock.hcl
