feat: Add xray-deployment definition

--- a/src/main/k8s/assets/xray_daemon/hpa.yaml
+++ b/src/main/k8s/assets/xray_daemon/hpa.yaml
@@ -2,6 +2,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: xray-daemon
+  namespace: ${namespace}
 spec:
   maxReplicas: 10
   minReplicas: 2
