fix: paramterize image tags
fix: change svc for xray daemon from NodePort to CLusterIP

--- a/src/main/k8s/assets/adot_collector/deployment.yaml
+++ b/src/main/k8s/assets/adot_collector/deployment.yaml
@@ -21,7 +21,7 @@ spec:
       securityContext:
         fsGroup: 65534
       containers:
-        - image: public.ecr.aws/aws-observability/aws-otel-collector:latest
+        - image: public.ecr.aws/aws-observability/aws-otel-collector:${adot_collector_img_tag}
           name: adot-collector
           imagePullPolicy: Always
           command:
