--- a/src/main/assets/cognito_authorizer/package.json
+++ b/src/main/assets/cognito_authorizer/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "jwk-to-pem": "^2.0.5",
     "jwks-rsa": "^3.0.1"
