--- a/src/main/k8s/assets/xray_daemon/deployment.yaml
+++ b/src/main/k8s/assets/xray_daemon/deployment.yaml
@@ -30,6 +30,8 @@ spec:
         ports:
         - containerPort: 2000
           protocol: UDP
+        - containerPort: 2000
+          protocol: TCP
         resources:
           limits:
             cpu: 300m
