--- a/src/main/k8s/assets/adot_collector/config_map.yaml
+++ b/src/main/k8s/assets/adot_collector/config_map.yaml
@@ -292,6 +292,7 @@ data:
       # convert cumulative sum datapoints to delta
       cumulativetodelta:
         include:
+          match_type: strict
           metrics:
               - new_container_cpu_usage_seconds_total
               - pod_cpu_usage_seconds_total
