--- a/src/main/k8s/assets/adot_collector/config_map.yaml
+++ b/src/main/k8s/assets/adot_collector/config_map.yaml
@@ -438,7 +438,7 @@ data:
     exporters:
       awsemf:
         log_group_name: '/aws/eks/{ClusterName}/adot-metrics'
-        log_stream_name: '{PodName}'
+        log_stream_name: '{Service}'
         namespace: 'ContainerInsights'
         region: ${aws_region}
         resource_to_telemetry_conversion:
