--- a/src/main/k8s/assets/adot_collector/config_map.yaml
+++ b/src/main/k8s/assets/adot_collector/config_map.yaml
@@ -437,7 +437,7 @@ data:
 
     exporters:
       awsemf:
-        log_group_name: '/aws/eks/{ClusterName}/adot-metrics'
+        log_group_name: '/aws/containerinsights/{ClusterName}/performance'
         log_stream_name: '{PodName}'
         namespace: 'ContainerInsights'
         region: ${aws_region}
