--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -70,7 +70,7 @@ jobs:
         max-parallel: 1
         matrix:
           # environment: [dev, uat, prod_w]
-          environment: [dev]
+          environment: [dev, uat]
       runs-on: ubuntu-latest
       continue-on-error: false
       environment: ${{ matrix.environment }}
